tests/syntax_error/bad_toplevel_declaration.jou
92  # Error: expected a definition or declaration, got an integer
